# search_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: converterJSON.h  converterJson.h  customExeptions.h  invertedIndex.h  searchServer.h
json/: config.json
src/: CMakeLists.txt  converterJSON.cpp  converterJson.cpp  invertedIndex.cpp  searchEngine.cpp  searchServer.cpp
tests/: CMakeLists.txt  converterJsonTest.cpp  invertedIndexTest.cpp  searchServerTest.cpp
